<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tvApellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtApellidos" />

        <TextView
            android:id="@+id/tvDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDni" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="189dp"
        android:orientation="horizontal"
        android:layout_toEndOf="@+id/linDetalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imbEditar"
            style="@style/AppTheme.imButton"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/imgEditarAlumno"
            app:layout_constraintEnd_toStartOf="@+id/imbBorrar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_mode_edit_blue_48dp" />

        <ImageButton
            android:id="@+id/imbBorrar"
            style="@style/AppTheme.imButton"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/imgBorrarAlumno"
            app:layout_constraintEnd_toStartOf="@+id/imbDetalle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_blue_48dp" />

        <ImageButton
            android:id="@+id/imbDetalle"
            style="@style/AppTheme.imButton"
            android:contentDescription="@string/imgDetalleAlumno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_assignment_blue_48dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>