<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCodNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tvNumAlumnos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNumAlumnos" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imbEditar"
            style="@style/AppTheme.imButton"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/imgEditarAsignatura"
            app:layout_constraintEnd_toStartOf="@+id/imbBorrar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_mode_edit_blue_48dp" />

        <ImageButton
            android:id="@+id/imbBorrar"
            style="@style/AppTheme.imButton"
            android:contentDescription="@string/imgBorrarAsignatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_blue_48dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>